--- a/terror.ipynb
+++ b/terror.ipynb
@@ -17,6 +17,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "73f4b3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Data set link :-https://drive.google.com/file/d/1luTU7xBvI7QAGPbQMxEHcgKUi9d6UeP_/view"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "id": "d1792256",
    "metadata": {},
@@ -1578,7 +1588,7 @@
    "execution_count": 104,
    "id": "955c8f4b",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2186,7 +2196,7 @@
    "execution_count": 122,
    "id": "e4dfa563",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
